samples/_failures_safe/1761098311_fc2da5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e32ac08.c: In function ‘main’:
./samples/SAFE/__tmp_8e32ac08.c:120:5: error: ‘MATRI’ undeclared (first use in this function)
  120 |     MATRI
      |     ^~~~~
./samples/SAFE/__tmp_8e32ac08.c:120:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8e32ac08.c:120:10: error: expected ‘;’ at end of input
  120 |     MATRI
      |          ^
      |          ;
./samples/SAFE/__tmp_8e32ac08.c:120:5: error: expected declaration or statement at end of input
  120 |     MATRI
      |     ^~~~~
